[gd_scene load_steps=5 format=3 uid="uid://dw5ps5ko2p4au"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_tas65"]
[ext_resource type="Texture2D" uid="uid://b7wnitd8gi6cr" path="res://assets/screenshot.png" id="2_6axi3"]

[sub_resource type="SystemFont" id="SystemFont_1i4qx"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_76ebn"]
font_names = PackedStringArray("Impact")

[node name="Start_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tas65")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6axi3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 27.0
offset_right = 11.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_1i4qx")
theme_override_font_sizes/font_size = 60
text = "NOS GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
theme_override_fonts/font = SubResource("SystemFont_76ebn")
theme_override_font_sizes/font_size = 28
text = "START GAME"

[node name="Separator5" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
theme_override_fonts/font = SubResource("SystemFont_76ebn")
theme_override_font_sizes/font_size = 28
text = "QUIT GAME"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
